--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
+  
+  <head>
+    <title>Title</title>
+  </head>
 
   <body>
 
-    <h1>This is the Main Title</h1>
+    <h1>This is the Main Header</h1>
 
     <p>This is where you can write a paragraph of text</p>
 
