--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   
   <head>
-    <title>Title</title>
+    <title>Index</title>
   </head>
 
   <body>
 
-    <h1>This is the Main Header</h1>
+    <h1>Index Page</h1>
 
-    <p>This is where you can write a paragraph of text</p>
+    <p><a href="Week1_intro.html">HTML Basic</a></p>
 
   </body>
 
