--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<html>
-  
+
+<!DOCTYPE html>
+<html lang="en-US">
   <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Index</title>
+    <link rel="stylesheet" href="index.css">
   </head>
-
   <body>
-
     <h1>Index Page</h1>
+    <table>
+      
+        <tr class="Exercise">
+        <td>Week 1</td>
+        <td><a href="Week1_intro.html">HTML Basic</a></td>
+        </tr>
 
-    <p><a href="Week1_intro.html">HTML Basic</a></p>
+     </table>
+
+   <footer>
+     <a href="">Jenny Chen</a>
+   </footer>
 
   </body>
-
-</html>
