--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Index Page</h1>
+    <h1>Web Design Index</h1>
+    <h4>Jenny Chen</h4>
     <table>
       
         <tr class="Exercise">
@@ -18,7 +19,7 @@
      </table>
 
    <footer>
-     <a href="">Jenny Chen</a>
+     <a href=""></a>
    </footer>
 
   </body>
