--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <td>Week 1</td>
         <td><a href="Week1_intro.html">HTML Basic</a></td>
         </tr>
+      
+        <tr class="Exercise">
+        <td>Week 1</td>
+        <td><a href="JSFiddle_Project1">HTML JSFiddle Project - 1</a></td>
+        </tr>
 
      </table>
 
