--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
         <tr class="Exercise">
         <td>Week 1</td>
-        <td><a href="JSFiddle_Project1">HTML JSFiddle Project - 1</a></td>
+        <td><a href="JSFiddle_Project1.html">HTML JSFiddle Project - 1</a></td>
         </tr>
 
      </table>
