--- a/JSFiddle_Project1.html
+++ b/JSFiddle_Project1.html
@@ -10,9 +10,7 @@
 
     <p>This is where you can write a paragraph of text</p>
     
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%
-    2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F02%2F18
-    %2Fsamoyed-green-background-692737423.jpg" width=500 height = 500>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F02%2F18%2Fsamoyed-green-background-692737423.jpg" width=500 height = 500>
 
   </body>
 
