--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         <td></td>
         <td><a href="JSFiddle_Project1.txt">HTML JSFiddle Project #1 Code</a></td>
         </tr>
+      
+        <tr class="Exercise">
+        <td></td>
+        <td><a href="JSFiddle_Project1_With_CSS.html">CSS JSFiddle Project #1 Website</a></td>
+        </tr>
+      
+        <tr class="Exercise">
+        <td></td>
+        <td><a href="JSFiddle_Project1_With_CSS.txt">CSS JSFiddle Project #1 Code</a></td>
+        </tr>
 
      </table>
 
