--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
         <tr class="Exercise">
         <td></td>
-        <td><a href="JSFiddle_Project1_CSS.txt">CSS JSFiddle Project #1 Code</a></td>
+        <td><a href="JSFiffle_Project1_CSS.txt">CSS JSFiddle Project #1 Code</a></td>
         </tr>
 
      </table>
