--- a/video.html
+++ b/video.html
@@ -7,7 +7,7 @@
     <title>Benefits</title>
     <style>
       iframe{
-        float: left;
+        float: right;
         margin: 0px 60px 15px 15px ;
       }
 
