--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       
       <tr class="Exercise">
         <td></td>
-        <td><a href="videoCSS.css">Video CSS Code</a></td>
+        <td><a href="videoCSS.txt">Video CSS Code</a></td>
         </tr>
 
      </table>
