--- a/video.html
+++ b/video.html
@@ -85,5 +85,9 @@
             form the basis for performance in math and engineering.</p>
       </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <button onclick="toggleTheme()">Change Theme</button>
   </body>
 </html>
