--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <link rel="stylesheet" href="video.css">
+    <link rel="stylesheet" href="style1.css">
     <title>Benefits</title>
     <style>
       iframe{
