--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Index</title>
     <script src="/rotatecss.js"></script>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="FPstyle1.css">
   </head>
   <body>
     <h1>Web Design Index</h1>
