--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         </tr>
       
       <tr class="Exercise">
+        <td></td>
+        </tr>
+      
+      <tr class="Exercise">
         <td>Implementing JavaScript</td>
       </tr>
 
